--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ pandas==2.3.2
 plotly==6.3.0
 openai==1.108.1
 langchain==0.3.27
+langchain-core==0.3.76
+langchain-openai==0.3.33
+langchain-text-splitters==0.3.11
