--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ langchain==0.3.27
 langchain-core==0.3.76
 langchain-openai==0.3.33
 langchain-text-splitters==0.3.11
+python-dotenv=1.1.1=pyhe01879c_0
