--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 streamlit==1.49.1
 tavily-python==0.7.12
-numpy=2.3.3=py313h050da96_0
-numpy-base=2.3.3=py313h1e017a8_0
-pandas=2.3.2=py313h42c1672_0
+numpy==2.3.3
+pandas==2.3.2
 plotly==6.3.0
 openai==1.108.1
 langchain==0.3.27
 langchain-core==0.3.76
 langchain-openai==0.3.33
 langchain-text-splitters==0.3.11
-python-dotenv=1.1.1=pyhe01879c_0
+python-dotenv==1.0.1   # latest stable pip release (no weird conda hashes)
