--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,23 @@
 [server]
 headless = true
+
+# .streamlit/config.toml
+
+# Sets the default theme. "light" or "dark".
+[theme]
+base = "light" # or "light" to make light mode the default
+
+# Primary brand color for buttons, links, etc.
+primaryColor = "#FF4B4B"
+
+# Background color for the main app area
+backgroundColor = "#FFC0CB" # light mode background
+
+# Background color for sidebars and secondary containers
+secondaryBackgroundColor = "#262730" # Dark mode sidebar background
+
+# Text color
+textColor = "#0E1117"
+
+# Font family (e.g., "sans serif", "serif", "monospace")
+font = "sans serif"
