--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -5,6 +5,7 @@ headless = true
 
 # Sets the default theme. "light" or "dark".
 [theme]
+primaryColor="#4fa47d"
 backgroundColor="#ffc0cb"
 secondaryBackgroundColor="#e1e2ef"
 textColor="#0e1117"
